--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,17 @@
     <artifactId>java-client</artifactId>
     <version>8.6.0</version>
 </dependency>
+	<dependency>
+	    <groupId>org.testng</groupId>
+	    <artifactId>testng</artifactId>
+	    <version>6.14.2</version>
+	    <scope>test</scope>
+	</dependency>	
+	<dependency>
+	    <groupId>com.relevantcodes</groupId>
+	    <artifactId>extentreports</artifactId>
+	    <version>2.41.1</version>
+	</dependency>
 </dependencies>
 
 </project>
